Connect app component to navigation to hide content when mobile nav is visible.  Also adjust default medium size to fix heading overlap

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,6 +17,10 @@ main {
   color: var(--color-purple);
 }
 
+main.hidden {
+  color: white;
+}
+
 /* Responsive design: Adjust layout for smaller screens */
 @media (max-width: 768px) {
   .container {
