--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -3,7 +3,7 @@ $default-font-size: 1.6rem;
 
 // Breakpoint Variables
 $breakpoint-small: 480px; // Mobile
-$breakpoint-medium: 860px; // Tablet
+$breakpoint-medium: 880px; // Tablet
 $breakpoint-large: 1024px; // Desktop
 
 @mixin small {
